# hk-enhancer

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md
.github/workflows/: ci.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: EnvelopeFollower.cpp  EnvelopeFollower.h  HarmonicExciter.cpp  HarmonicExciter.h  MultibandSplitter.cpp  MultibandSplitter.h  SubBassEnhancer.cpp  SubBassEnhancer.h  SubharmonicGenerator.cpp  SubharmonicGenerator.h  TextureEnhancer.cpp  TextureEnhancer.h  TubeSaturator.cpp  TubeSaturator.h
Source/GUI/: BandControl.cpp  BandControl.h  LookAndFeel.cpp  LookAndFeel.h
Tests/: TestEnvelopeFollower.cpp  TestHarmonicExciter.cpp  TestMultibandSplitter.cpp  TestSubBassEnhancer.cpp  TestSubharmonicGenerator.cpp  TestTextureEnhancer.cpp  TestTubeSaturator.cpp
scripts/: format.sh  lint.sh  test.sh
